<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="start|center_vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/present_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="0.46"
            android:background="@color/present"
            android:gravity="center"
            android:text="@string/present"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/absent_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="0.46"
            android:background="@color/absent"
            android:gravity="center"
            android:text="@string/absent"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/leave_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="0.46"
            android:background="@color/leave"
            android:gravity="center"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/leave"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/remarks_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1.57"
            android:background="@color/remarks"
            android:gravity="start|center_vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/remarks"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
</LinearLayout>