<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/family_register1_bg"
        tools:context="com.adms.classsafari.Activites.RegistrationScreen">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginTop="@dimen/_9sdp"
                    android:src="@drawable/white_arrow" />

                <TextView
                    android:id="@+id/activity_name"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/family_register1"
                    android:paddingTop="@dimen/_2sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/first_name_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/user_white"
                    android:hint="@string/first_name" />

                <EditText
                    android:id="@+id/last_name_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/user_white"
                    android:hint="@string/last_name" />

                <EditText
                    android:id="@+id/email_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/email_white"
                    android:inputType="textEmailAddress"
                    android:hint="@string/user_id" />

                <EditText
                    android:id="@+id/password_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/password_white"
                    android:inputType="textPassword"
                    android:hint="@string/user_pass" />

                <EditText
                    android:id="@+id/phone_no_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/mobile"
                    android:hint="@string/phone_no"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/date_of_birth_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/age"
                    android:hint="@string/dob" />
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/login_btn"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>