<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sucees_bg"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/blue"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginLeft="@dimen/_5sdp"
                android:src="@drawable/white_arrow" />

            <TextView
                android:id="@+id/activity_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/forgot"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_125sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llEnterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_1sdp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/llButtonLayout"
                        android:layout_below="@+id/imgLoginScreenLogo"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/strEnterRegdMobNum"
                            android:textColor="@color/text_color"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_line"
                            android:gravity="center"
                            android:hint="@string/strRegdMobNum"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:padding="10dp"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">

                        <Button
                            android:id="@+id/btnSendRegEmail"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/search_boder"
                            android:text="@string/strSendOtp"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/llButtonLayout"
                        android:layout_below="@+id/imgLoginScreenLogo"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">

                        <EditText
                            android:id="@+id/edtPinPwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_line"
                            android:gravity="center"
                            android:hint="@string/strPinPwd"
                            android:imeOptions="actionDone"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:padding="10dp"
                            android:singleLine="true" />

                        <EditText
                            android:id="@+id/edtConfirmPinPwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_text_line"
                            android:gravity="center"
                            android:hint="@string/strConfirmPin"
                            android:imeOptions="actionDone"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:padding="10dp"
                            android:singleLine="true" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/llButtonLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">

                        <Button
                            android:id="@+id/btnChangePwd"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/search_boder"
                            android:text="@string/strChangePwd"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:background="@color/gray"
                            android:text="@string/strCancel"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>