<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_family_bg"
        tools:context="com.adms.classsafari.Activites.RegistrationScreen">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/first_name_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/user_white"
                    android:hint="@string/first_name" />

                <EditText
                    android:id="@+id/last_name_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/user_white"
                    android:hint="@string/last_name" />

                <EditText
                    android:id="@+id/email_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/email_white"
                    android:hint="@string/user_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/password_white"
                    android:hint="@string/user_pass"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/phone_no_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableRight="@drawable/mobile"
                    android:hint="@string/phone_no"
                    android:maxLength="10"
                    android:inputType="number" />

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/male_chk"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="0.8"
                        android:button="@drawable/absent_radio_type"
                        android:checked="true"
                        android:paddingLeft="@dimen/_3sdp"
                        android:tag="1"
                        android:text="Male"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                    <RadioButton
                        android:id="@+id/female_chk"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="0.8"
                        android:button="@drawable/absent_radio_type"
                        android:paddingLeft="@dimen/_3sdp"
                        android:tag="2"
                        android:text="Female"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </RadioGroup>

                <Button
                    android:id="@+id/date_of_birth_edt"
                    style="@style/AutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableRight="@drawable/dob"
                    android:hint="@string/dob" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:background="@drawable/register_btn"
                    android:text="ADD"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:background="@drawable/register_btn"
                    android:text="CANCEL"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>